docs: 유세지 역할 추가

--- a/유세지.md
+++ b/유세지.md
@@ -10,3 +10,7 @@
 
 - **[Blog](https://usage.tistory.com/)**
 - **[GitHub Profile](https://github.com/usageness)** 
+
+## 역할
+- **프론트 엔드 개발**
+- UI 구현, 기능 개발, 페이지 디자인
